Closed Bug 801301 Opened 13 years ago Closed 13 years ago

Aurora 18 menu bug

Categories

(Core :: Widget: Win32, defect)

18 Branch
x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19
Tracking Status
firefox18 + verified

People

(Reporter: vargadoktor, Assigned: jh.dev0)

References

Details

(Keywords: regression)

Attachments

(2 files)

Attached image aurorabug.png
User Agent: Mozilla/5.0 (Windows NT 5.1; rv:18.0) Gecko/18.0 Firefox/18.0 Build ID: 20121012114555 Steps to reproduce: My Aurora 17 has been updated to version 18 (2012-10-08 win32 en-US, 2012-10-12 win32 en-US, then 2012-10-12 win323 hu). Actual results: The Firefox button menu covers opening Web developers submenu. The same happens in bookmarks menu, it covers bookmarks submenus. Expected results: Web developers submenu should be drawn over the Firefox button menu.
Component: Untriaged → Menus
Can you reproduce this with your add-ons disabled?
I disabled all my add-ons manually. It didn't help. I created new profile but nothing changed. If I restart the browser in safe mode, it's OK, the bug disappears.
And as a note, problem happens only when hardware acceleration in enabled.
Blocks: 610713
Component: Menus → Widget: Win32
Product: Firefox → Core
Keywords: qawanted
Status: UNCONFIRMED → NEW
Ever confirmed: true
Are the people affected all running Windows XP? If so, did anyone with this bug on XP experience bug 610713 at all?
Interestingly, as far as I test, I can't reproduce bug 610713 at all with m-i changeset http://hg.mozilla.org/integration/mozilla-inbound/rev/65b95ed309b9 (Last changeset before the patches of bug 610713 was landed)
Attached patch Possible patchSplinter Review
I don't have access to an XP computer that supports hardware acceleration so I can't test this properly. Assuming bug 610713 didn't affect XP users adding an OS check could fix this bug without regressing that one.
Comment on attachment 671266 [details] [diff] [review] Possible patch Review of attachment 671266 [details] [diff] [review]: ----------------------------------------------------------------- Looks good to me. I guess we're working around a Windows XP bug here.
Attachment #671266 - Flags: review+
Comment on attachment 671266 [details] [diff] [review] Possible patch Review of attachment 671266 [details] [diff] [review]: ----------------------------------------------------------------- I think we should take this on trunk ASAP because we need to see if it fixes the problem. The patch itself is quite safe, it's just a partial backout of bug 610713 for Windows XP.
Attachment #671266 - Flags: checkin?
Assignee: nobody → jh.dev0
Status: NEW → ASSIGNED
No problem with try server build on my PC.
Comment on attachment 671266 [details] [diff] [review] Possible patch [Approval Request Comment] Bug caused by (feature/regressing bug #): 610713 User impact if declined: menus in the wrong z-order make the browser difficult to use Testing completed (on m-c, etc.): landed on m-c Risk to taking this patch (and alternatives if risky): low risk. It's effectively a partial backout of bug 610713 for Windows XP only String or UUID changes made by this patch: none
Attachment #671266 - Flags: approval-mozilla-aurora?
Thanks for the quick followup work, James.
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
WFM in the Oct 18 build of Seamonkey, WinXP. thank you!
Comment on attachment 671266 [details] [diff] [review] Possible patch Approving for aurora, considering it is low risk and user verification in comment 18 .
Attachment #671266 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Verified as fixed on Firefox 18 beta 3 - web developer and bookmarks menus are not covered anymore. Mozilla/5.0 (Windows NT 5.1; rv:18.0) Gecko/20100101 Firefox/18.0 Build ID: 20121205060959
QA Contact: simona.marcu
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: