Bug 801301 - Fix popup submenus opening behind their parent on Windows XP. r=roc